--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:name="android.hardware.bluetooth_le"
         android:required="true" />
     <application
+        android:enableOnBackInvokedCallback="true"
         android:label="test4"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
